bridge/base/broker-service.yaml
# check if there is at least one published port

#! broker-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: broker-published
    namespace: rsp-main-project
    labels:
        com.docker.compose.project: rsp_main_project
        com.docker.compose.service: broker
spec:
    selector:
        com.docker.compose.project: rsp_main_project
        com.docker.compose.service: broker
    ports:
        - name: broker-1883
          port: 1883
          protocol: TCP
          targetPort: broker-1883

# check if there is at least one published port
